- implemented Calendar controller - cleaned up code to kotlin/intellij standard - added log4j2.xml
